Fix issue #39 no empty start id with importer